docs: add docs example

--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,11 +1,15 @@
-# Introduction
- 
-Welcome to Nextra! This is a basic docs template. You can use it as a starting point for your own project :)
+# ❓ What is DropDash
 
-## What is Nextra?
+A home delivery platform that allows users to search for and purchase products from local restaurants near their homes, place orders, and schedule deliveries. Provides access to restaurants to manage their menus, receive orders, and handle their meals through the platform. Inspired by platforms like Rappi and Uber Eats
 
-A **simple**, **powerful** and **flexible** site generation framework with everything you love from Next.js.
+## 🌟 Key Features
 
-## Documentation
 
-The documentation is available at [https://nextra.site](https://nextra.site).
+
+## 📖 Documentation and Usage
+
+For more details on how to integrate the DropDash API, refer to our [Documentation](). It includes examples of requests and responses, authentication guides, and error handling.
+
+## ✉️ Contact
+
+For additional support, questions, or suggestions, email us at [support@fandomhub.com]().
